--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: peerswap_web_1
+      APP_HOST: $APP_PEERSWAP_IP
       APP_PORT: 1984
 
   web:
