--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_PEERSWAP_IP
+      APP_HOST: peerswap_web_1
       APP_PORT: 1984
 
   web:
@@ -24,6 +24,3 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/root/.peerswap
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
-    networks:
-      default:
-        ipv4_address: $APP_PEERSWAP_IP
