--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -9,7 +9,7 @@ description: PeerSwap enables Lightning Network nodes to balance their channels 
   WARNING! Elements Core wallet has no seed phrase recovery!
 
   Take care to backup wallet.dat after each liquid transaction, including all peer swaps. In case of a catastrophic failure of your SSD all L-BTC funds may be lost. On Umbrel, this file is located in /home/umbrel/umbrel/app-data/elements/data/liquidv1/wallets/peerswap folder. Run your node with UPS. **DO NOT** uninstall Elements Core unless all liquid funds are spent or you have saved the wallet.dat file. **DO NOT** let this file get into wrong hands, as it is not passphrase protected. 
-developer: PeerSwap Project
+developer: PeerSwap Developers
 website: https://peerswap.dev
 dependencies:
   - lightning
