--- a/cloudflared/umbrel-app.yml
+++ b/cloudflared/umbrel-app.yml
@@ -6,14 +6,14 @@ category: networking
 version: "2023.10.0 (web 1.0.1)"
 port: 4499
 description: >-
-  Start a secure tunnel to access your Umbrel apps from the Internet using Cloudflare network. 
-  With Tunnel, you do not send traffic to an external IP — instead, 
-  this app containing a lightweight tunneluing daemon (cloudflared) creates outbound-only 
+  Start a secure tunnel to access your Umbrel apps from the Internet using the Cloudflare network. 
+  With Cloudflare Tunnel, you do not send traffic to an external IP — instead, 
+  this app contains a lightweight tunneling daemon (cloudflared) that creates outbound-only 
   connections to Cloudflare's global network.
 
 
-  To use this app, you must have a set up Cloudflare account with added domains. 
-  Once you've done setting it up, check out the guide with examples to configure your own tunnel:
+  To use this app, you must have a Cloudflare account set up with your own domain(s) configured. 
+  Once you have set up a Cloudflare account, check out this guide with examples to configure your own tunnel:
   https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
 
 
