add note to compose

--- a/specter-desktop/docker-compose.yml
+++ b/specter-desktop/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - --specter-data-folder=/data
     environment:
       # TODO: APP_PASSWORD
+      # These env vars no longer work from v2.0.0 onwards (after introduction of public electrum server option). Keeping them here for potential future use if Specter Desktop adds support for them again. 
       BTC_RPC_USER: $APP_BITCOIN_RPC_USER
       BTC_RPC_PASSWORD: $APP_BITCOIN_RPC_PASS
       BTC_RPC_HOST: $APP_BITCOIN_NODE_IP
