tweak release notes

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -44,12 +44,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Please create a full backup before migrating. You can easily create a backup in Settings --> Backup Specter (zip file).
+  ⚠️ As usual, please create a full backup of Specter before updating by going to Settings in the app and clicking "Download Specter backup (zip file).
 
 
-  This update takes Specter Desktop from 1.14.5 to 2.0.2.
-
-
-  Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
+  This is a large update that takes Specter Desktop from 1.14.5 to 2.0.2! Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
