Update Specter Desktop to 2.0.2 (#894)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,30 +2,36 @@ manifestVersion: 1
 id: specter-desktop
 category: bitcoin
 name: Specter Desktop
-version: "1.14.5"
+version: "2.0.2"
 tagline: Multisig with hardware wallets made easy
 description: >-
-  Specter Desktop connects to the Bitcoin Core running on your Umbrel
-  and functions as a watch-only coordinator for multi-signature and single-key
+  Specter Desktop can be used to connect to the Bitcoin Core running on your Umbrel or an Electrum Server.
+  It functions as a watch-only coordinator for multi-signature and single-key
   Bitcoin wallets. At the moment Specter Desktop is working with all major
   hardware wallets including:
 
+
+  - SeedSigner
+
+  - Specter DIY (optionally airgapped, using QR codes)
+
+  - Blockstream Jade
+
+  - ColdCard (optionally airgapped, using an SD card)
+
+  - Passport
+
+  - BitBox02
+
+  - Electrum (optionally airgapped, if running Electrum on an airgapped computer/phone)
+
+  - Keystone (airgapped, using QR codes)
 
   - Trezor
 
   - Ledger
 
   - KeepKey
-
-  - BitBox02
-
-  - ColdCard (optionally airgapped, using an SD card)
-
-  - Electrum (optionally airgapped, if running Electrum on an airgapped computer/phone)
-
-  - Specter DIY (optionally airgapped, using QR codes)
-
-  - Cobo (airgapped, using QR codes)
 
 
   Specter Desktop also supports using the Bitcoin Core on your Umbrel as a hot wallet, by importing or generating a random BIP39 mnemonic, but this feature is experimental and we do not recommend using it at this stage. We plan to add support for other hardware wallets as they come up.
@@ -44,11 +50,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release updates Specter Desktop to version 1.14.5, which is the latest version that maintains full compatibility
-  with node implementations like the Bitcoin Node app on Umbrel. Compatibility for future versions is on the Specter Desktop
-  development roadmap, and these versions will be brought to Umbrel as soon as they are available!
+  ⚠️ As usual, please create a full backup of Specter before updating by going to Settings in the app and clicking "Download Specter backup (zip file).
 
 
-  Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
+  This is a large update that takes Specter Desktop from 1.14.5 to 2.0.2! Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
