--- a/specter-desktop/docker-compose.yml
+++ b/specter-desktop/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 25441
 
   web:
-    image: lncm/specter-desktop:v1.14.5@sha256:beea686b08e1ed47d293fd39c125dfd4be7629f60b4591474e6bcce7dcd0466f
+    image: lncm/specter-desktop:v2.0.2@sha256:aeda6dfaa3f82c7bd3e1c6ba61388df02bd0c22a59412d2bbed3c792fb0b3702
     stop_signal: SIGINT
     restart: on-failure
     stop_grace_period: 1m
@@ -18,6 +18,7 @@ services:
       - --specter-data-folder=/data
     environment:
       # TODO: APP_PASSWORD
+      # These env vars no longer work from v2.0.0 onwards (after introduction of public electrum server option). Keeping them here for potential future use if Specter Desktop adds support for them again. 
       BTC_RPC_USER: $APP_BITCOIN_RPC_USER
       BTC_RPC_PASSWORD: $APP_BITCOIN_RPC_PASS
       BTC_RPC_HOST: $APP_BITCOIN_NODE_IP
