--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: thunderhub
 category: bitcoin
 name: ThunderHub
-version: "0.13.29"
+version: "0.13.30"
 tagline: Take full control of your Lightning node
 description: >-
   ThunderHub allows you to take full control of your Lightning node
@@ -14,7 +14,7 @@ description: >-
 
   Managing and monitoring your node has never been easier with transaction reports, graphs and a huge assortment of different features all bundled inside of this great tool.
 developer: Anthony Potdevin
-website: https://apotdevin.com
+website: https://thunderhub.io/
 dependencies:
   - lightning
 repo: https://github.com/apotdevin/thunderhub
@@ -28,6 +28,12 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This update brings Thunderhub from version 0.13.23 to 0.13.29. Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
+  - Chore: Extra error log
+  
+  - Fix: Boltz swap claim transaction fees
+  
+  - Fix: Adding safety on object lookups
+  
+  Full release notes can be found at https://github.com/apotdevin/thunderhub/releases/tag/v0.13.30
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
