--- a/alby-nostr-wallet-connect/docker-compose.yml
+++ b/alby-nostr-wallet-connect/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_PORT: 8080
       PROXY_AUTH_ADD: "false"
   server:
-    image: ghcr.io/getalby/nostr-wallet-connect:0.4.1
+    image: ghcr.io/getalby/nostr-wallet-connect:0.4.1@sha256:d1473f18ce706b542eaa7637dbab3bafa1e445aac32daffe3b31cbf91d329548
     volumes:
       - ${APP_DATA_DIR}/data:/data
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
