--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -2,8 +2,7 @@ manifestVersion: 1
 id: alby-nostr-wallet-connect
 name: Nostr Wallet Connect
 tagline: The power of the zaps at the tip of your fingers.
-icon: https://raw.githubusercontent.com/getAlby/umbrel-community-app-store/master/alby-nostr-wallet-connect/images/nwc_icon.svg
-category: Finance
+category: finance
 version: "0.4.1"
 port: 58000
 description: >-
@@ -17,17 +16,19 @@ description: >-
 developer: Alby
 website: http://getalby.com/
 submitter: Alby
-submission: https://github.com/getAlby/nostr-wallet-connect
+submission: https://github.com/getumbrel/umbrel-apps/pull/636
 repo: https://github.com/getAlby/nostr-wallet-connect
 support: https://github.com/getAlby/nostr-wallet-connect/issues
 gallery:
-  - https://raw.githubusercontent.com/getAlby/umbrel-community-app-store/master/alby-nostr-wallet-connect/images/nwc_1.png
-  - https://raw.githubusercontent.com/getAlby/umbrel-community-app-store/master/alby-nostr-wallet-connect/images/nwc_2.png
-  - https://raw.githubusercontent.com/getAlby/umbrel-community-app-store/master/alby-nostr-wallet-connect/images/nwc_3.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: >-
   - This release adds the following Nostr Wallet Connect (NIP-47) extension methods: pay_keysend, make_invoice, lookup_invoice, list_transactions, get_balance, get_info which can be used by developers to make awesome apps powered by NWC.
+
   - Improved app connection UI.
-dependencies: []
+dependencies:
+  - lightning
 path: ""
 defaultUsername: ""
 defaultPassword: ""
