--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -3,17 +3,16 @@ id: alby-nostr-wallet-connect
 name: Nostr Wallet Connect
 tagline: The power of the zaps at the tip of your fingers.
 category: finance
-version: "0.3.0"
+version: "0.4.1"
 port: 58000
 description: >-
-  Connect your LND node over Nostr to zap directly from within supported apps like Damus & Amethyst.
+  Connect your LND node over Nostr.
 
+  Zap directly from within supported apps like Damus & Amethyst.
 
-  🛠️ Instructions
+  Amethyst step-by-step guide: https://blog.getalby.com/native-zapping-in-amethyst
 
-  - Amethyst step-by-step guide: https://blog.getalby.com/native-zapping-in-amethyst
-
-  - Damus (currently only on Testflight) video guide: https://streamable.com/bareih
+  Damus (currently only on Testflight) video guide: https://streamable.com/bareih
 developer: Alby
 website: http://getalby.com/
 submitter: Alby
@@ -25,7 +24,9 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  This release includes a number of bug fixes and improvements. Full release notes are available at https://github.com/getAlby/nostr-wallet-connect/releases/tag/0.3.0
+  - This release adds the following Nostr Wallet Connect (NIP-47) extension methods: pay_keysend, make_invoice, lookup_invoice, list_transactions, get_balance, get_info which can be used by developers to make awesome apps powered by NWC.
+
+  - Improved app connection UI.
 dependencies:
   - lightning
 path: ""
