--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -6,13 +6,14 @@ category: finance
 version: "0.4.1"
 port: 58000
 description: >-
-  Connect your LND node over Nostr.
+  Connect your LND node over Nostr to zap directly from within supported apps like Damus & Amethyst.
 
-  Zap directly from within supported apps like Damus & Amethyst.
 
-  Amethyst step-by-step guide: https://blog.getalby.com/native-zapping-in-amethyst
+  🛠️ Instructions
 
-  Damus (currently only on Testflight) video guide: https://streamable.com/bareih
+  - Amethyst step-by-step guide: https://blog.getalby.com/native-zapping-in-amethyst
+
+  - Damus (currently only on Testflight) video guide: https://streamable.com/bareih
 developer: Alby
 website: http://getalby.com/
 submitter: Alby
