--- a/2fauth/docker-compose.yml
+++ b/2fauth/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     environment:
       APP_HOST: 2fauth_web_1
       APP_PORT: 8000
+      PROXY_AUTH_ADD: "false" #has it's own auth
 
   web:
     image: 2fauth/2fauth:5.0.2@sha256:85b1a5c81b211d5794df12b50c3d28707696699e31493a04773804f7239aea02
     volumes:
       - ${APP_DATA_DIR}/data:/2fauth
-
