add restart and stop grace period

--- a/2fauth/docker-compose.yml
+++ b/2fauth/docker-compose.yml
@@ -9,5 +9,7 @@ services:
 
   web:
     image: 2fauth/2fauth:5.0.2@sha256:85b1a5c81b211d5794df12b50c3d28707696699e31493a04773804f7239aea02
+    restart: on-failure
+    stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data:/2fauth
