--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -6,9 +6,7 @@ version: "1.1.1"
 tagline: Balance your lightning channels with Liquid BTC
 description: PeerSwap enables Lightning Network nodes to balance their channels by facilitating atomic swaps with direct peers. PeerSwap enhances decentralization of the Lightning Network by enabling all nodes to be their own swap provider. No centralized coordinator, no 3rd party rent collector, and lowest cost channel balancing means small nodes can better compete with large nodes.
 
-  WARNING! Elements Core wallet has no seed phrase recovery!
-
-  Take care to backup wallet.dat after each liquid transaction, including all peer swaps. In case of a catastrophic failure of your SSD all L-BTC funds may be lost. On Umbrel, this file is located in /home/umbrel/umbrel/app-data/elements/data/liquidv1/wallets/peerswap folder. Run your node with UPS. **DO NOT** uninstall Elements Core unless all liquid funds are spent or you have saved the wallet.dat file. **DO NOT** let this file get into wrong hands, as it is not passphrase protected. 
+  WARNING! Elements Core wallet has no seed phrase recovery! Take care to backup wallet.dat after each liquid transaction.
 developer: PeerSwap Project
 website: https://peerswap.dev
 dependencies:
