--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: audiobookshelf
 name: Audiobookshelf
 tagline: Audiobook and podcast server
 category: media
-version: "2.6.0"
+version: "2.7.1"
 port: 13378
 description: >-
   Features:
@@ -61,22 +61,20 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release brings audiobookshelf from version 2.5.0 to 2.6.0. 
+  This release brings audiobookshelf from version 2.6.0 to 2.7.1. 
 
+  Note: OpenID Connect Authentication requires mobile app v0.9.70-beta or up
 
 
   Added
 
-  - SSO via OpenID Connect authentication
+  - Year in review stats images to user stats page
 
-  - Simple API caching for /libraries* requests
+  - Ability to fetch book data in uploader
 
-  - NFO files as book metadata source
+  - Zoom controls to comic reader
 
-  - Czech translations
-
-  - Swedish translations
-
+  Plus many fixes and changes...
 
   
   Full release notes can be found at https://github.com/advplyr/audiobookshelf/releases
