--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: nextcloud
 category: files
 name: Nextcloud
-version: "28.0.0"
+version: "28.0.1"
 tagline: Productivity platform that keeps you in control
 description: >-
   Nextcloud puts your data at your fingertips, under your control.
@@ -25,7 +25,7 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  🚨 This is a major update of the Nextcloud app on Umbrel! It may take several minutes to install the update, so please be patient and don't restart your Umbrel during this process.
+  This update takes Nextcloud from version 28.0.0 to 28.0.1 and includes many fixes.
 
 
   Full release details for all Nextcloud versions can be found at https://nextcloud.com/changelog/
