--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -25,7 +25,7 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  This update takes Nextcloud from version 28.0.0 to 28.0.1 and includes many fixes.
+  This patch update takes Nextcloud from version 28.0.0 to 28.0.1 and includes many fixes.
 
 
   Full release details for all Nextcloud versions can be found at https://nextcloud.com/changelog/
