edit release notes

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -42,24 +42,19 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update brings Bitcoin Core 26.0, with changes such as:
+   What's new in Bitcoin Core version 26.0?
 
 
-  - Nodes with multiple reachable networks will actively try to have at least one outbound connection to each network. This improves individual resistance to eclipse attacks and network level resistance to partition attacks. Users no longer need to perform active measures to ensure being connected to multiple enabled networks.
+  - P2P and network changes
 
+  - Pruning changes: Improved handling of prune budget when using assumeutxo with -prune.
 
-  - Experimental support for the v2 transport protocol defined in BIP324 was added. It is off by default, but when enabled using -v2transport it will be negotiated on a per-connection basis with other peers that support it too. The existing v1 transport protocol remains fully supported.
-
-
-  - When using assumeutxo with -prune, the prune budget may be exceeded if it is set lower than 1100MB (i.e. MIN_DISK_SPACE_FOR_BLOCK_FILES * 2). Prune budget is normally split evenly across each chainstate, unless the resulting prune budget per chainstate is beneath MIN_DISK_SPACE_FOR_BLOCK_FILES in which case that value will be used.
-
-
-  - New RPCs: loadtxoutset, getprioritisedtransactions, submitpackage, getaddrmaninfo and importmempool
-
+  - New and updated RPCs
+  
 
   - and more!
 
 
-  Discover what's new in Bitcoin Core 26.0: https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-26.0.md
+  Read the full release notes for additional information and detailed changes at https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-26.0.md
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/576ecd2bef8d625abceed0f67ec9c487da9b2b1b
