Update Bitcoin to 26.0 (#935)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: bitcoin
 category: bitcoin
 name: Bitcoin Node
-version: "25.1"
+version: "26.0"
 tagline: Run your personal node powered by Bitcoin Core
 description: >-
   Run your Bitcoin node and independently store and validate
@@ -42,25 +42,18 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update brings Bitcoin Core 25.1, automatic 'settings.json' corruption detection and repair, along with several new advanced settings such as:
+  What's new in Bitcoin Core version 26.0?
 
 
-  - Peer Settings: Customize your node's connections and interactions with network peers. For example, you can now adjust ban durations for misbehaving peers.
+  - P2P and network changes
 
+  - Pruning changes: Improved handling of prune budget when using assumeutxo with -prune.
 
-  - Optimization: Fine-tune your node's performance and resource usage with new settings like maximum mempool size.
-
-
-  - RPC and REST: Configure access to your node's RPC and REST APIs.
-
-
+  - New and updated RPCs
+  
   - and more!
 
 
-  ⚠️ 'Peer Bloom Filters' is now disabled by default for all users, to enhance privacy and lower the risk of denial-of-serice (DoS attacks). You can read more at https://github.com/getumbrel/umbrel/issues/1624.
-  If you are connecting older wallet clients that depend on the BIP37 protocol (eg. Bisq), you can enable 'Peer Bloom Filters' in Advanced Settings at the cost of reduced security.
-
-
-  Discover what's new in Bitcoin Core 25.1: https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-25.1.md
+  Read the full release notes for additional information and detailed changes at https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-26.0.md
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/576ecd2bef8d625abceed0f67ec9c487da9b2b1b
