--- a/watch-your-lan/docker-compose.yml
+++ b/watch-your-lan/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   web:
-    image: aceberg/watchyourlan
+    image: aceberg/watchyourlan:1.0.6@sha256:c42ce1dcb1af6dac44d3674f24511558cf89b99982cee8843016fd8ad3935871
     network_mode: "host"        
     restart: on-failure
     stop_grace_period: 1m
