--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
   web:
-    image: sethforprivacy/public-pool-ui:db286e5@sha256:1a411ed59cdf3a3bddbfc2b4b90b413ad7dbbd6787543aff3c4ae4ffb260b80e
+    image: smolgrrr/public-pool-ui:latest@sha256:a83aa6204ce616f3184fe3b5ace3d82f1260783fd49a0258b313b88a9d313965
     restart: unless-stopped
     environment:
       - DOMAIN=$DEVICE_DOMAIN_NAME
