--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -3,7 +3,7 @@ id: alby-nostr-wallet-connect
 name: Nostr Wallet Connect
 tagline: The power of the zaps at the tip of your fingers.
 category: finance
-version: "0.4.1"
+version: "0.4.2"
 port: 58000
 description: >-
   Connect your LND node over Nostr.
@@ -24,9 +24,9 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  - This release adds the following Nostr Wallet Connect (NIP-47) extension methods: pay_keysend, make_invoice, lookup_invoice, list_transactions, get_balance, get_info which can be used by developers to make awesome apps powered by NWC.
-
-  - Improved app connection UI.
+  - This release fixes a number of performance issues: High CPU and slow fetching for users with a large number of apps.
+  
+  - It also fixes a discrepancy in the timestamp format in the responses of extension methods.
 dependencies:
   - lightning
 path: ""
