--- a/vikunja/docker-compose.yml
+++ b/vikunja/docker-compose.yml
@@ -3,11 +3,13 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: vikunja_frontend_1
+      APP_HOST: vikunja_proxy_1
       APP_PORT: 80
+      # vikunja has its own auth, so we don't need to use transparent umbrel auth here
+      PROXY_AUTH_ADD: "false"
 
   db:
-    image: mariadb:10@sha256:385c0ba6270307511a511ad915350736602c33fafb3f63f663c853920424c365
+    image: mariadb:10.11.6@sha256:20a8bd91d972c97cffded88f2ba0ab533c8988b2dc08090c57d50caf7114ed20
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
       MYSQL_ROOT_PASSWORD: supersecret
@@ -15,29 +17,34 @@ services:
       MYSQL_PASSWORD: secret
       MYSQL_DATABASE: vikunja
     volumes:
-      - ${APP_DATA_DIR}/db:/var/lib/mysql
-    restart: unless-stopped
+      - ${APP_DATA_DIR}/data/db:/var/lib/mysql
+    restart: on-failure
+
   api:
-    image: vikunja/api:0.21@sha256:e541ef5599d08f50a24e8de1fd8136f9d0a7ef514916fac6d6bf8ac6c7c16712
+    image: vikunja/api:0.22.0@sha256:91609ef6c7887f9dbf03542da675dc784807f9861907bdcdb775d4a127605646
     environment:
       VIKUNJA_DATABASE_HOST: db
       VIKUNJA_DATABASE_PASSWORD: secret
       VIKUNJA_DATABASE_TYPE: mysql
       VIKUNJA_DATABASE_USER: vikunja
       VIKUNJA_DATABASE_DATABASE: vikunja
-      VIKUNJA_SERVICE_JWTSECRET: <a super secure random secret>
-      DEVICE_DOMAIN_NAME: "${DEVICE_DOMAIN_NAME}"
-      VIKUNJA_SERVICE_FRONTENDURL: http://DEVICE_DOMAIN_NAME/
-    ports:
-      - 3456:3456
-    volumes:
-      - ${APP_DATA_DIR}/files:/app/vikunja/files
+      VIKUNJA_SERVICE_JWTSECRET: ${APP_SEED}
+      VIKUNJA_SERVICE_FRONTENDURL: http://${DEVICE_DOMAIN_NAME}/
+    volumes: 
+      - ${APP_DATA_DIR}/data/files:/app/vikunja/files
     depends_on:
       - db
-    restart: unless-stopped
+    restart: on-failure
+
   frontend:
-    image: vikunja/frontend:0.21@sha256:fdd4582979beee4a6bef2d4d8e3744809b82ab2e198d708a829d7189a0ad9882
-    restart: unless-stopped
-    environment:
-      DEVICE_DOMAIN_NAME: "${DEVICE_DOMAIN_NAME}"
-      VIKUNJA_API_URL: http://DEVICE_DOMAIN_NAME:3456/api/v1
+    image: vikunja/frontend:0.22.0@sha256:f603ef35acfe030d34752bc3d84e45a234152110345edf8cf2939db986e900b1
+    restart: on-failure
+
+  proxy:
+    image: nginx:1.25.3@sha256:4c0fdaa8b6341bfdeca5f18f7837462c80cff90527ee35ef185571e1c327beac
+    volumes:
+      - ${APP_DATA_DIR}/data/proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - api
+      - frontend
+    restart: on-failure
