--- a/vikunja/umbrel-app.yml
+++ b/vikunja/umbrel-app.yml
@@ -1,43 +1,37 @@
 manifestVersion: 1
 id: vikunja
 category: files
-name: vikunja
-version: "0.21"
+name: Vikunja
+version: "0.22.0"
 tagline: The open-source, self-hostable to-do app
 description: >-
-  Think of Vikunja like the notebook you have with all your things to keep track of.
-  But with superpowers.
-  Stay organized
+  Think of Vikunja like the notebook you have with all your things to keep track of. But with superpowers.
+
+
+  STAY ORGANIZED
+
   Organize all of your tasks in projects. Create subprojects organize everything hierarchical and keep related stuff grouped together.
 
 
-  Collaborate with peers
+  COLLABORATE WITH PEERS
+
   Vikunja lets you easily share a project with another user or a whole team! Assignments show who's working on what.
 
 
-  Use it how you need it
+  USE IT HOW YOU NEED IT
+
   You can view your tasks in the classic list view - or in a Gantt Chart, or Table view, or Kanban Board. Whatever you need!
-
-
-  Built for speed.
-  We built Vikunja with speed in mind - every interaction takes less than 100ms. No more loading spinners.
-  Because a productive tool should not get in your way.
-
-
-  Import your tasks from Todoist, Trello or Microsoft To-Do
-  Because work does not happen in one tool only.
-developer: kolaente
+developer: Vikunja
 website: https://vikunja.io/
 dependencies: []
-repo: https://kolaente.dev/vikunja/
-support: https://vikunja.io/docs/
+repo: https://github.com/go-vikunja
+support: https://community.vikunja.io/
 port: 4523
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: ""
-defaultPassword: ""
+deterministicPassword: false
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/
