--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -3,40 +3,24 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: public-pool_traefik_1
+      APP_HOST: public-pool_proxy_1
       APP_PORT: 80
       PROXY_AUTH_WHITELIST: "/api/*"
 
-  traefik:
-    image: traefik:v2.10.7@sha256:c5181ddf303f1ccfd4bd6d1d9c4867b0500efb6089a0f9ccb16612438f6e934f
-    restart: unless-stopped
-    command:
-      - "--accesslog=false"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-
   web:
-    image: smolgrrr/public-pool-ui:latest@sha256:a83aa6204ce616f3184fe3b5ace3d82f1260783fd49a0258b313b88a9d313965
+    image: smolgrrr/public-pool-ui:latest
     restart: unless-stopped
     environment:
       - DOMAIN=$DEVICE_DOMAIN_NAME
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.public-pool-ui.rule=Host(`$DEVICE_DOMAIN_NAME`)"
-      - "traefik.http.routers.public-pool-ui.entrypoints=web"
-      - "traefik.http.services.public-pool-ui.loadbalancer.server.port=80"
 
   server:
     image: sethforprivacy/public-pool:4bb00f2@sha256:0fc82e7123be68650c9e31f57a5a206e622acbcaa170e31219a488818ad6da6b
     restart: unless-stopped
     stop_grace_period: 30s
     ports:
-      - "0.0.0.0:3333:3333/tcp"
+      - "0.0.0.0:2018:2018/tcp"
     volumes:
-      - "${APP_DATA_DIR}/data/public-pool-db:/public-pool/DB"
+      - "${APP_DATA_DIR}/data/db/public-pool-db:/public-pool/DB"
     environment:
       - NODE_ENV=production
       - BITCOIN_RPC_URL=http://${APP_BITCOIN_NODE_IP}
@@ -45,14 +29,18 @@ services:
       - BITCOIN_RPC_PORT=${APP_BITCOIN_RPC_PORT}
       - BITCOIN_RPC_TIMEOUT=10000
       - BITCOIN_ZMQ_HOST="tcp://${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_ZMQ_RAWBLOCK_PORT}"
-      - API_PORT=3334
-      - STRATUM_PORT=3333
+      - API_PORT=2019
+      - STRATUM_PORT=2018
       - NETWORK=mainnet
       - API_SECURE=false
       - ENABLE_SOLO=true
       - ENABLE_PROXY=false
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.public-pool-api.rule=Host(`$DEVICE_DOMAIN_NAME`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.public-pool-api.entrypoints=web"
-      - "traefik.http.services.public-pool-api.loadbalancer.server.port=3334"
+
+  proxy:
+    image: nginx:1.25.3@sha256:4c0fdaa8b6341bfdeca5f18f7837462c80cff90527ee35ef185571e1c327beac
+    volumes:
+      - ${APP_DATA_DIR}/data/proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - web
+      - server
+    restart: on-failure
