--- a/seafile/umbrel-app.yml
+++ b/seafile/umbrel-app.yml
@@ -1,27 +1,36 @@
 manifestVersion: 1
 id: seafile
 category: files
-name: SeaFile
-version: "10.0.1"
-tagline: High performance file syncing and sharing
-description: >-
-  Seafile is an open source cloud storage system with privacy protection and teamwork features. Collections of files are called libraries. Each library can be synced separately. A library can also be encrypted with a user chosen password. Seafile also allows users to create groups and easily sharing files into groups.
+name: Seafile
+version: "11.0.3"
+tagline: Reliable and Performant File Sync and Share Solution
+description: >
+  Seafile is an open source file sync&share solution designed for high reliability, performance and productivity.
+  Sync, share and collaborate across devices and teams. Build your team's knowledge base with Seafile's built-in Wiki feature.
 
 
-  Seafile has features like File syncing, sharing and collaboration, Drive client, and many more.
-developer: haiwen
-website: https://www.seafile.com/en/home/
+  🔄 Reliable File Syncing
+  
+  Organize files into libraries. A library can be selectively synced into any device. Reliable and efficient file syncing improves your productivity.
+
+
+  🛡️ Built-in File Encryption
+
+  A library can be encrypted by a password choosen by you. Files are encrypted before syncing to the server. Even the system admin can't view the files.
+releaseNotes: ""
+developer: Seafile
+website: https://www.seafile.com/
 dependencies: []
 repo: https://github.com/haiwen/seafile
-support: https://manual.seafile.com/
+support: https://www.seafile.com/en/support/
 port: 8920
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
 path: ""
-deterministicPassword: false
-defaultUsername: "me@example.com"
-defaultPassword: "asecret"
+torOnly: false
+defaultUsername: "umbrel"
+deterministicPassword: true
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/281
