--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 1984
 
   web:
-    image: ghcr.io/impa10r/peerswap-web:v1.1.3
+    image: ghcr.io/impa10r/peerswap-web:v1.1.3@sha256:7b2c1f692d7616566a09ea888fdb2476515f91390c70a668a3bb3fdc72f837e0
     restart: on-failure
     stop_grace_period: 1m
     environment:
