--- a/vikunja/umbrel-app.yml
+++ b/vikunja/umbrel-app.yml
@@ -8,17 +8,17 @@ description: >-
   Think of Vikunja like the notebook you have with all your things to keep track of. But with superpowers.
 
 
-  STAY ORGANIZED
+  🗂️ Stay Organized
 
   Organize all of your tasks in projects. Create subprojects organize everything hierarchical and keep related stuff grouped together.
 
 
-  COLLABORATE WITH PEERS
+  👥 Collaborate With Peers
 
   Vikunja lets you easily share a project with another user or a whole team! Assignments show who's working on what.
 
 
-  USE IT HOW YOU NEED IT
+  🛠️ Use It How You Need It
 
   You can view your tasks in the classic list view - or in a Gantt Chart, or Table view, or Kanban Board. Whatever you need!
 developer: Vikunja
