Hotfix public-pool

--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -2,14 +2,17 @@ manifestVersion: 1
 id: public-pool
 category: bitcoin
 name: Public Pool
-version: "4bb00f2"
+version: "dcfc528-hotfix"
 tagline: Fully Open Source Solo Bitcoin Mining Pool
 description: >-
-  Fully Open Source Solo Bitcoin Mining Pool
+  Run your own Bitcoin Solo Mining Pool with no fees.
 
+  Connected to your Bitcoin node, and only your node. Contribute to furthering bitcoin mining decentralisation.
 
-  Don't trust. Verify. On steroids.
-developer: benjamin-wilson
+  Allows you to pool together any and all mining hardware, with mining rewards going directly to your chosen bitcoin address. 
+
+  Track total hashrate and your individual works with ease.
+developer: Benjamin Wilson
 website: https://web.public-pool.io/#/
 dependencies:
   - bitcoin
@@ -21,6 +24,10 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+releaseNotes: >-
+  This hotfix update disables the extra caching, so less powerful devices don't run out of memory.
+
+  Also, fixs port/CORs issues in the UI when proxied to be accessible over the internet.
 defaultPassword: ""
 submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/pull/915
