--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -25,9 +25,13 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This hotfix update disables the extra caching, so less powerful devices don't run out of memory.
+  This hotfix update disables extra caching, so less powerful devices don't run out of memory.
 
-  Also, fixs port/CORs issues in the UI when proxied to be accessible over the internet.
+
+  Also, this update fixs port/CORs issues when proxied to be accessible over the public internet.
+
+
+  https://github.com/sethforprivacy/public-pool/pull/1
 defaultPassword: ""
 submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/pull/915
