--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -31,7 +31,7 @@ releaseNotes: >-
   Also, this update fixs port/CORs issues when proxied to be accessible over the public internet.
 
 
-  https://github.com/sethforprivacy/public-pool/pull/1
+  See changes here: https://github.com/sethforprivacy/public-pool/pull/1
 defaultPassword: ""
 submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/pull/915
