--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "2018:2018/tcp"
     volumes:
-      - "${APP_DATA_DIR}/data/db:/public-pool/DB"
+      - "${APP_DATA_DIR}/data/database:/public-pool/DB"
     environment:
       - NODE_ENV=production
       - BITCOIN_RPC_URL=http://${APP_BITCOIN_NODE_IP}
