--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -26,6 +26,7 @@ gallery:
 path: ""
 releaseNotes: >-
   This hotfix update disables extra caching, so less powerful devices don't run out of memory.
+  It will result in the reinitiation of the pool's database.
 
 
   Also, this update fixs port/CORs issues when proxied to be accessible over the public internet.
