--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -2,14 +2,17 @@ manifestVersion: 1
 id: public-pool
 category: bitcoin
 name: Public Pool
-version: "4bb00f2"
+version: "dcfc528-hotfix"
 tagline: Fully Open Source Solo Bitcoin Mining Pool
 description: >-
-  Fully Open Source Solo Bitcoin Mining Pool
+  Run your own Bitcoin Solo Mining Pool with no fees.
 
+  Connected to your Bitcoin node, and only your node. Contribute to furthering bitcoin mining decentralisation.
 
-  Don't trust. Verify. On steroids.
-developer: benjamin-wilson
+  Allows you to pool together any and all mining hardware, with mining rewards going directly to your chosen bitcoin address. 
+
+  Track total hashrate and your individual works with ease.
+developer: Benjamin Wilson
 website: https://web.public-pool.io/#/
 dependencies:
   - bitcoin
@@ -21,6 +24,15 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+releaseNotes: >-
+  This hotfix update disables extra caching, so less powerful devices don't run out of memory.
+  It will result in the reinitiation of the pool's database.
+
+
+  Also, this update fixs port/CORs issues when proxied to be accessible over the public internet.
+
+
+  See changes here: https://github.com/sethforprivacy/public-pool/pull/1
 defaultPassword: ""
 submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/pull/915
