add additional instructions

--- a/seafile/umbrel-app.yml
+++ b/seafile/umbrel-app.yml
@@ -17,6 +17,12 @@ description: >
   🛡️ Built-in File Encryption
 
   A library can be encrypted by a password choosen by you. Files are encrypted before syncing to the server. Even the system admin can't view the files.
+
+
+  🛠️ SET-UP:
+
+  Seafile is configured to work out-of-the-box when installed on Umbrel. However, if you want to be able to upload files from a domain name that is not umbrel.local,
+  open the Seafile app, go to System Admin > Settings and change "FILE_SERVER_ROOT" to /seafhttp.
 releaseNotes: ""
 developer: Seafile
 website: https://www.seafile.com/
