--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -39,10 +39,12 @@ services:
 
   importer:
     image: fireflyiii/data-importer:version-1.4.0@sha256:05f8e99dbafe57f7f2158298253d20c9fb27733abeec9e9c17ad8e951760464d
-    restart: always
+    restart: on-failure
     ports:
-      - '81:8080'
+      - '30010:8080'
     depends_on:
       - server
     environment:
-      - FIREFLY_III_URL=$DEVICE_DOMAIN_NAME
+      - FIREFLY_III_URL=http://server:8080
+      - VANITY_URL=http://${DEVICE_DOMAIN_NAME}:30009
+
