--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: public-pool
 category: bitcoin
 name: Public Pool
-version: "dcfc528-hotfix"
+version: "ef2d2b8-hotfix"
 tagline: Fully Open Source Solo Bitcoin Mining Pool
 description: >-
   Run your own Bitcoin Solo Mining Pool with no fees.
@@ -25,14 +25,9 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This hotfix update disables extra caching, so less powerful devices don't run out of memory.
-  It will result in the reinitiation of the pool's database.
+  This hotfix update resolves an issue that was causing public-pool to persist old-blocks.
 
-
-  Also, this update fixs port/CORs issues when proxied to be accessible over the public internet.
-
-
-  See changes here: https://github.com/sethforprivacy/public-pool/pull/1
+  See changes here: https://github.com/benjamin-wilson/public-pool/commit/dadb03ed1cba6334acc009b79a389fb7b71e8567 
 defaultPassword: ""
 submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/pull/915
