--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: firefly-iii
 category: finance
 name: Firefly III
-version: "6.1.4"
+version: "6.1.6"
 tagline: Your personal finance manager
 description: >-
   Firefly III is a manager for your personal finances. It is self-hosted and open source. This means that it's free, it has no ads and no tracking.
@@ -31,6 +31,11 @@ description: >-
   JSON rest API
 
   For the advanced and mobile users out there, Firefly III features an expansive JSON REST API that allows you to tap into Firefly III's most important features. Create transactions, manage categories and get chart data from any app or system.
+
+
+  Firefly Data Importer
+
+  To use the data importer open http://umbrel.local:30010/ and follow the set-up instructions.
 developer: Firefly III
 website: https://www.firefly-iii.org/
 dependencies: []
@@ -45,6 +50,6 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >-
-  This release updates Firefly III from version 6.0.30 to 6.1.4. Full release notes can be found here: https://github.com/firefly-iii/firefly-iii/releases
+  This release updates Firefly III from version 6.0.30 to 6.1.6. Full release notes can be found here: https://github.com/firefly-iii/firefly-iii/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/378
