--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -3,17 +3,17 @@ id: alby-nostr-wallet-connect
 name: Nostr Wallet Connect
 tagline: The power of the zaps at the tip of your fingers.
 category: finance
-version: "0.4.1"
+version: "0.4.2"
 port: 58000
 description: >-
   Connect your LND node over Nostr to zap directly from within supported apps like Damus & Amethyst.
 
-
+  
   🛠️ Instructions
 
   - Amethyst step-by-step guide: https://blog.getalby.com/native-zapping-in-amethyst
 
-  - Damus (currently only on Testflight) video guide: https://streamable.com/bareih
+  - Damus video guide: https://streamable.com/bareih
 developer: Alby
 website: http://getalby.com/
 submitter: Alby
@@ -25,9 +25,9 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  - This release adds the following Nostr Wallet Connect (NIP-47) extension methods: pay_keysend, make_invoice, lookup_invoice, list_transactions, get_balance, get_info which can be used by developers to make awesome apps powered by NWC.
-
-  - Improved app connection UI.
+  - This release fixes a number of performance issues: High CPU and slow fetching for users with a large number of apps.
+  
+  - It also fixes a discrepancy in the timestamp format in the responses of extension methods.
 dependencies:
   - lightning
 path: ""
