update app host

--- a/firefly-iii-importer/umbrel-app.yml
+++ b/firefly-iii-importer/umbrel-app.yml
@@ -5,8 +5,7 @@ name: Firefly III Importer
 version: "1.4.0"
 tagline: Import your transactions into Firefly III
 description: >-
-  Firefly III is a manager for your personal finances. It is self-hosted and open source. This means that it's free, it has no ads and no tracking.
-  The data importer is built to help you import transactions into Firefly III. It is separated from Firefly III for security and maintenance reasons.
+  Firefly III is a manager for your personal finances. The data importer is built to help you import transactions into Firefly III. It is separated from Firefly III for security and maintenance reasons.
 
 
   The data importer does not connect to your bank directly. Instead, it uses Nordigen and SaltEdge to connect to over 6000 banks worldwide. These services are free for Firefly III users, but require registration. Keep in mind these services have their own privacy and data usage policies.
