add env vars for readarr setup

--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -34,3 +34,5 @@ services:
       LIDARR_CONFIG_XML: "${APP_PROWLARR_LIDARR_CONFIG_XML}"
       SONARR_URL: "http://sonarr_server_1:8989"
       SONARR_CONFIG_XML: "${APP_PROWLARR_SONARR_CONFIG_XML}"
+      READARR_URL: "http://readarr_server_1:8787"
+      READARR_CONFIG_XML: "${APP_PROWLARR_READARR_CONFIG_XML}"
