--- a/readarr/docker-compose.yml
+++ b/readarr/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
-    image: linuxserver/readarr:0.2.4-develop@sha256:5a6d8c07a93efc5d6b80479354f3dfac22d69b79c2354aa1d8da7de3982d4060
+    image: linuxserver/readarr:0.3.16-nightly@sha256:e0393656789fd839d05a6719b079984740652c050e2fc19083e5111e7905850c
     environment:
       - PUID=1000
       - PGID=1000
