add app id variable

--- a/readarr/docker-compose.yml
+++ b/readarr/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ${APP_DATA_DIR}/data/config:/config
       - ${UMBREL_ROOT}/data/storage/downloads:/downloads
     environment:
+      APP_ID: "readarr"
       DOWNLOAD_CLIENT_API_URL: "http://readarr_server_1:8787/api/v1/downloadclient"
       ROOT_FOLDER_API_URL: "http://readarr_server_1:8787/api/v1/rootfolder"
       TRANSMISSION_HOST: "transmission_server_1"
