--- a/readarr/docker-compose.yml
+++ b/readarr/docker-compose.yml
@@ -26,8 +26,9 @@ services:
       - ${UMBREL_ROOT}/data/storage/downloads:/downloads
     environment:
       APP_ID: "readarr"
-      DOWNLOAD_CLIENT_API_URL: "http://readarr_server_1:8787/api/v1/downloadclient"
-      ROOT_FOLDER_API_URL: "http://readarr_server_1:8787/api/v1/rootfolder"
+      APP_URL: "http://readarr_server_1:8787"
+      # DOWNLOAD_CLIENT_API_URL: "http://readarr_server_1:8787/api/v1/downloadclient"
+      # ROOT_FOLDER_API_URL: "http://readarr_server_1:8787/api/v1/rootfolder"
       TRANSMISSION_HOST: "transmission_server_1"
       TRANSMISSION_PORT: 9091
       ROOT_FOLDER: "/downloads/books"
