--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -6,25 +6,39 @@ version: "0.1.4"
 tagline: A tiny self-hosted federated messenger for the decentralized web.
 description: >-
   Databag is a self-hosted messaging service. Notable features include:
-    Decentralized (direct communication between app and server node)
-    Federated (accounts on different nodes can communicate)
-    Public-Private key based identity (not bound to any blockchain or hosting domain)
-    End-to-End encryption (the hosting admin cannot view sealed topics, deafult unsealed)
-    Audio and Video Calls (nat traversal requires separate relay server)
-    Topic based threads (messages organized by topic not contacts)
-    Lightweight (server can run on a raspberry pi zero v1.3)
-    Low latency (use of websockets for push events to avoid polling)
-    Unlimited accounts per node (host for your whole family)
-    Mobile alerts for new contacts, messages, and calls (supports UnifiedPush, FCM, APN)
 
+
+  - Decentralized (direct communication between app and server node)
+  
+  - Federated (accounts on different nodes can communicate)
+  
+  - Public-Private key based identity (not bound to any blockchain or hosting domain)
+  
+  - End-to-End encryption (the hosting admin cannot view sealed topics, deafult unsealed)
+  
+  - Audio and Video Calls (nat traversal requires separate relay server)
+
+  - Topic based threads (messages organized by topic not contacts)
+  
+  - Lightweight (server can run on a raspberry pi zero v1.3)
+  
+  - Low latency (use of websockets for push events to avoid polling)
+    
+  - Unlimited accounts per node (host for your whole family)
+  
+  - Mobile alerts for new contacts, messages, and calls (supports UnifiedPush, FCM, APN)
+releaseNotes: ""
 developer: Pierre Balzack
 website: https://github.com/balzack/databag
 repo: https://github.com/balzack/databag
 support: https://github.com/balzack/databag/discussions
 port: 7077
 gallery:
-  - 1.png
-  - 2.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: Pierre Balzack
+submission: https://github.com/getumbrel/umbrel/pull/649
