add dependencies to manifest

--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -28,6 +28,7 @@ description: >-
   
   - Mobile alerts for new contacts, messages, and calls (supports UnifiedPush, FCM, APN)
 releaseNotes: ""
+dependencies: []
 developer: Pierre Balzack
 website: https://github.com/balzack/databag
 repo: https://github.com/balzack/databag
