add deterministic password for admin

--- a/databag/docker-compose.yml
+++ b/databag/docker-compose.yml
@@ -13,3 +13,5 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/databag-data:/var/lib/databag
+    environment:
+      ADMIN: $APP_PASSWORD
