add image tag and multiarch digest

--- a/databag/docker-compose.yml
+++ b/databag/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 7000
       
   web:
-    image: balzack/databag:latest
+    image: balzack/databag:0.1.9@sha256:bb4acd565be843a1c662310415a403fe731904eddda364a77939a2c0d6fc3620
     restart: on-failure
     stop_grace_period: 1m
     volumes:
