Update robosats to 0.5.4

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -34,27 +34,22 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
-  We have introduced a new feature, F2F (Face-to-Face), allowing users to add a location for face-to-face cash trades. 
-  The book page now displays a map with all F2F orders. For privacy reasons, the exact location of your order is slightly randomized (uniform random 15 x 15 Km noise) when you click on the map to locate it. 
-  This means it's not possible to be precise, and the exact location can only be shared on the encrypted chat. 
-  Please note that using high-resolution maps can leak your IP to external tiling servers if you are not using Tor Browser.
+  This update is a minor release that takes Robosats from version 0.5.3-alpha to 0.5.4-alpha with some small enhancements and bug fixes.
 
 
-  Of course, adding a geolocation tag to your order is only a good idea if you want to use face-to-face cash as a payment method. 
-  You can completely disregard this feature if you do not want to use this payment method.
+  Changes
 
+  - Dependency updates and security fixes.
 
-  Bug Fixes and Performance Improvements:
+  - Coordinator serves robot hash_ids needed for >v0.6.0 client side robot identity generator.
 
-  - Dependency updates.
+  - Recommended and minimum onchain fees for payouts are now more accurate.
 
-  - Small bug fixes.
+  - Devfund node has moved. The new node now has public access to the invoices services (read-only).
 
-  - Improved DB Writes performance related to last_login user field.
+  - Fix book re-render on swap/fiat change
 
-  - Fix small bug on order logging that made automatic dispute resolutions fail.
-
-  - Devfund Donation Pubkey has been updated to RoboSats experimental LND2 node.
+  - and many more.
   
   
   Full release notes are available at https://github.com/RoboSats/robosats/releases
