Misc umbrel-app.yml changes

--- a/watch-your-lan/umbrel-app.yml
+++ b/watch-your-lan/umbrel-app.yml
@@ -1,8 +1,7 @@
 manifestVersion: 1
-id: personal-watch-your-lan
+id: watch-your-lan
 name: WatchYourLAN
 tagline: Lightweight network IP scanner with web GUI
-icon: https://svgur.com/i/120w.svg
 category: networking
 version: "1.0.6"
 port: 8840
@@ -11,12 +10,11 @@ description: >-
 developer: aceberg
 website: https://github.com/aceberg/WatchYourLAN
 submitter: Jasper
-submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/940
 repo: https://github.com/aceberg/WatchYourLAN
 support: https://github.com/aceberg/WatchYourLAN/issues
 gallery:
-  - https://raw.githubusercontent.com/aceberg/WatchYourLAN/main/assets/Screenshot_v0.6.png
-releaseNotes: >-
+  - 1.png
 dependencies: []
 path: ""
 defaultUsername: ""
