--- a/2fauth/umbrel-app.yml
+++ b/2fauth/umbrel-app.yml
@@ -6,7 +6,14 @@ category: files
 version: "5.0.2"
 port: 8235
 description: >-
-  A Web app to manage your Two-Factor Authentication (2FA) accounts and generate their security codes
+  A self-hosted app for managing your Two-Factor Authentication (2FA) accounts and generating their security codes.
+
+
+  Works with WebAuthn, Yubikey, Apple FaceId/TouchId for maximum security.
+
+
+  A beautiful desktop and mobile interface, with an API (plus personal access tokens) so you can access your codes with ease.
+  
 developer: Bubka
 website: https://docs.2fauth.app/
 repo: https://github.com/Bubka/2FAuth
