updated description follow suggestions

--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -27,6 +27,10 @@ description: >-
   - Unlimited accounts per node (host for your whole family)
   
   - Mobile alerts for new contacts, messages, and calls (supports UnifiedPush, FCM, APN)
+
+  Accounts are generally created by following a link provided by the service admin which includes a generated access code. The admin may alternatively distribute the access code directly which can be entered into the Create Account Screen in the mobile app. The link and access code are generated in the admin dashboard which is linked with the Cog in the upper right of the user login page.
+
+  Although the browser app will work over http, the mobile app requires https. Https is provided with the Cloudflare Tunnel app from the app store. Instructions on how to configure the tunnel are given in the wiki - https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
 releaseNotes: ""
 dependencies: []
 developer: Pierre Balzack
