Minor umbrel-app.yml update

--- a/pinserver/umbrel-app.yml
+++ b/pinserver/umbrel-app.yml
@@ -1,6 +1,5 @@
 manifestVersion: 1.1
 id: pinserver
-icon: https://svgshare.com/i/ta0.svg
 category: bitcoin
 name: Blind Oracle
 version: "0.0.1"
@@ -17,8 +16,6 @@ description: >-
 
         Blind oracle needs a Tor or a Tailscale connection, if you decide to use 
         Tailscale please enable Tailscale's MagicDNS.
-releasesNotes: >-
-        First version
 developer: Blockstream
 website: https://blockstream.com
 dependencies: []
@@ -26,7 +23,7 @@ repo: https://github.com/Blockstream/blind_pin_server
 support: https://t.me/blockstream_jade
 port: 3344
 gallery:
-  - https://i.imgur.com/iKlNNvD.jpeg
+  - 1.jpg
 path: ''
 deterministicPassword: false
 submitter: Valerio Vaccaro
