--- a/jellyseer/docker-compose.yml
+++ b/jellyseer/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   app_proxy:
     environment:
-      APP_HOST: overseerr_server_1
+      APP_HOST: jellyseerr_server_1
       APP_PORT: 5055
       PROXY_AUTH_WHITELIST: "/api/*"
 
