--- a/jellyseer/docker-compose.yml
+++ b/jellyseer/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     image: fallenbagel/jellyseerr:1.7.0@sha256:6dcdb5ba50913a14b2bd7df6388607ce175121f3416679c2746501256ac9f075
     volumes:
       - ${APP_DATA_DIR}/data/config:/app/config
-    restart: unless-stopped
+    restart: on-failure
