add submission PR to manifest

--- a/jellyseerr/umbrel-app.yml
+++ b/jellyseerr/umbrel-app.yml
@@ -32,3 +32,4 @@ defaultPassword: ""
 releaseNotes: ""
 torOnly: false
 submitter: johnpc
+submission: "https://github.com/getumbrel/umbrel-apps/pull/924"
