misc description reword

--- a/2fauth/umbrel-app.yml
+++ b/2fauth/umbrel-app.yml
@@ -6,7 +6,7 @@ category: files
 version: "5.0.2"
 port: 8235
 description: >-
-  A self-hosted app for managing your Two-Factor Authentication (2FA) accounts and generating their security codes.
+  A self-hosted app for managing your Two-Factor Authentication (2FA) accounts and generating security codes.
 
 
   Works with WebAuthn, Yubikey, Apple FaceId/TouchId for maximum security.
