Update autobrr to 1.36.0

--- a/autobrr/umbrel-app.yml
+++ b/autobrr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: autobrr
 category: media
 name: autobrr
-version: "1.34.1"
+version: "1.36.0"
 tagline: Modern, easy to use download automation for torrents and usenet
 description: >-
   autobrr is the modern download automation tool for torrents and usenet.
@@ -17,16 +17,16 @@ description: >-
 
   It then sends that torrent file to a download client of your choice. A download client can be anything from qBittorrent, Deluge, Radarr, Sonarr, watch folder, and more.
 releaseNotes: >-
-  This update takes autobrr from version 1.33.0 to 1.34.1, and includes the following changes:
+  This update takes autobrr from version 1.34.1 to 1.36.0, and includes the following changes:
 
 
-  -  ui overhaul 
+  - improved RSS size parsing
 
-  - log connection errors
+  - qBittorrent add priority handling
 
-  - support optional bot mode
+  - ability to change password and username
 
-  - verify external autobrr.com URLs
+  - incognito mode
 
   - and many more...
   
