--- a/node-red-standalone/docker-compose.yml
+++ b/node-red-standalone/docker-compose.yml
@@ -1,15 +1,16 @@
 version: "3.7"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: node-red-standalone_web_1
-      APP_PORT: 1881
-      # Used to allow (HTTP In) flows to be publicly exposed
-      PROXY_AUTH_WHITELIST: "/public/*"
+  # app_proxy:
+  #   environment:
+  #     APP_HOST: node-red-standalone_web_1
+  #     APP_PORT: 1881
+  #     # Used to allow (HTTP In) flows to be publicly exposed
+  #     PROXY_AUTH_WHITELIST: "/public/*"
   
   web:
     image: nodered/node-red:3.1.1@sha256:cf9749f31fdaee0a87a27aebf97ef6c051e1b6e77f021806f876055ae8d0b4c8
+    network_mode: host
     restart: on-failure
     stop_grace_period: 1m
     volumes:
