future-proof data dir

--- a/2fauth/docker-compose.yml
+++ b/2fauth/docker-compose.yml
@@ -12,4 +12,4 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}/data:/2fauth
+      - ${APP_DATA_DIR}/data/2fauth:/2fauth
