add APP_KEY for data encryption

--- a/2fauth/docker-compose.yml
+++ b/2fauth/docker-compose.yml
@@ -13,3 +13,5 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/2fauth:/2fauth
+    environment:
+      - APP_KEY=${APP_2FAUTH_APP_KEY} # data encryption
