add URL env vars now required for v5.0.3

--- a/2fauth/docker-compose.yml
+++ b/2fauth/docker-compose.yml
@@ -15,3 +15,5 @@ services:
       - ${APP_DATA_DIR}/data/2fauth:/2fauth
     environment:
       - APP_KEY=${APP_2FAUTH_APP_KEY} # data encryption
+      - APP_URL=http://${DEVICE_DOMAIN_NAME}:8235
+      - ASSET_URL=http://${DEVICE_DOMAIN_NAME}:8235
