update gallery images

--- a/watch-your-lan/umbrel-app.yml
+++ b/watch-your-lan/umbrel-app.yml
@@ -14,7 +14,9 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/940
 repo: https://github.com/aceberg/WatchYourLAN
 support: https://github.com/aceberg/WatchYourLAN/issues
 gallery:
-  - 1.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 dependencies: []
 path: ""
 defaultUsername: ""
