add releaseNotes placeholder

--- a/watch-your-lan/umbrel-app.yml
+++ b/watch-your-lan/umbrel-app.yml
@@ -7,6 +7,7 @@ version: "1.0.6"
 port: 8840
 description: >-
   Lightweight network IP scanner with web GUI
+releaseNotes: ""
 developer: aceberg
 website: https://github.com/aceberg/WatchYourLAN
 submitter: Jasper
