--- a/nostrudel/umbrel-app.yml
+++ b/nostrudel/umbrel-app.yml
@@ -2,13 +2,19 @@ manifestVersion: 1
 id: nostrudel
 category: social
 name: noStrudel
-version: "0.37.1"
+version: "0.38.0"
 tagline: A sandbox for exploring nostr
 description: >-
   noStrudel is a nostr web client that is focused on exploring the nostr network.
 
   The focus is on power users or any other users who want to learn the inner workings of nostr.
-releaseNotes: ""
+releaseNotes: >-
+ - Support for nsecbunker and the new OAuth flow
+ - Added simple "Launchpad" view (most stuff will be added in the future)
+ - Restore scroll position when returning to the timeline
+ - Show unavailable events in threads
+ - Organized all the "other stuff" in a tools page
+ - Added support to cache events in local relays instead of the browsers cache
 
 developer: hzrd149
 website: https://github.com/hzrd149/nostrudel
