Add enp1s0 interface to IFACE env

--- a/watch-your-lan/docker-compose.yml
+++ b/watch-your-lan/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     init: true
     environment:
       TZ: "UTC"
-      IFACE: "eth0 wlan0"               # required: 1 or more interface
+      IFACE: "eth0 wlan0 enp1s0"        # required: 1 or more interface
       DBPATH: "/data/db.sqlite"         # optional, default: /data/db.sqlite
       GUIIP: "0.0.0.0"                  # optional, default: localhost
       GUIPORT: "8840"                   # optional, default: 8840
