--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -1,10 +1,13 @@
 manifestVersion: 1.1
-id: bitcoin
+id: bitcoin-knots
 category: bitcoin
 name: Bitcoin Knots
 version: "25.1"
 tagline: Run your personal node powered by Bitcoin Knots
 description: >-
+  Bitcoin Knots will be compatible with all apps that need Bitcoin Core in a future umbrel update.
+  
+
   Run your Bitcoin node and independently store and validate
   every single Bitcoin transaction with it. Achieve unparalleled
   privacy by connecting your wallet directly to your node to
@@ -29,7 +32,7 @@ website: https://bitcoinknots.org
 dependencies: []
 repo: https://github.com/bitcoinknots/bitcoin.git
 support: https://github.com/bitcoinknots/bitcoin/issues
-port: 2100
+port: 2101
 gallery:
   - 1.jpg
   - 2.jpg
@@ -53,4 +56,4 @@ releaseNotes: >-
 
   Read the full release notes for additional information and detailed changes at https://github.com/bitcoinknots/bitcoin/blob/v25.1.knots20231115/doc/release-notes.md
 submitter: Léo Haf
-submission: to update.
+submission: https://github.com/getumbrel/umbrel-apps/pull/953
