--- a/esphome/docker-compose.yml
+++ b/esphome/docker-compose.yml
@@ -1,13 +1,9 @@
 version: "3.7"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: esphome_server_1
-      APP_PORT: 6052
-
   server:
-    image: esphome/esphome:2023.11.6@sha256:783e2131fcff2c457846339a80f6ed981e58e5f86de3578f742e3bed87f7d5b2
+    image: esphome/esphome:2023.12.9@sha256:0ec7b41a9566e7465d17d6eb2c785158eb7e61a131b21eb91a8ff9f4d14f1a4f
+    network_mode: host
     volumes:
       - ${APP_DATA_DIR}/data:/config
     restart: on-failure
